--- a/src/view/EnterPhone.form
+++ b/src/view/EnterPhone.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="view.EnterPhone">
-  <grid id="27dc6" binding="rootPanel" layout-manager="GridBagLayout">
+  <grid id="27dc6" binding="rootPanel" custom-create="true" layout-manager="GridBagLayout">
     <constraints>
       <xy x="20" y="20" width="765" height="430"/>
     </constraints>
@@ -70,7 +70,7 @@
           <gridbag weightx="0.0" weighty="5.0"/>
         </constraints>
       </vspacer>
-      <component id="db880" class="javax.swing.JFormattedTextField" binding="enterPhone">
+      <component id="db880" class="javax.swing.JFormattedTextField" binding="phone" custom-create="true">
         <constraints>
           <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -78,7 +78,7 @@
           <gridbag weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties>
-          <text value="+7"/>
+          <text value=""/>
         </properties>
       </component>
       <hspacer id="4189f">
