Добавлено пустое окно Undecorated с возможностью его закрытия и сворачивания, а также перетаскивание и изменение размера В это окно планируется вставлять всевозможные панельки программы

--- a/src/view/EnterConfirmationCode.form
+++ b/src/view/EnterConfirmationCode.form
@@ -58,7 +58,7 @@
           <gridbag weightx="1.0" weighty="0.0"/>
         </constraints>
         <properties>
-          <text value="Продолжить"/>
+          <text value="Ок"/>
         </properties>
       </component>
       <hspacer id="29ee3">
