--- a/src/view/contactsList/ContactForList.form
+++ b/src/view/contactsList/ContactForList.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="view.ContactForList">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="view.contactsList.ContactForList">
   <grid id="27dc6" binding="rootPanel" custom-create="true" layout-manager="GridBagLayout">
     <constraints>
       <xy x="35" y="65" width="500" height="128"/>
