Созданы диалоги Начало пределки последовательности перехода между панелями

--- a/src/view/undecorated/DecorationForFrame.form
+++ b/src/view/undecorated/DecorationForFrame.form
@@ -12,7 +12,7 @@
       <size top="3" left="3" bottom="3" right="3"/>
     </border>
     <children>
-      <grid id="c45c4" binding="topPanel" layout-manager="FlowLayout" hgap="5" vgap="2" flow-align="2">
+      <grid id="c45c4" binding="topPanel" layout-manager="GridBagLayout">
         <constraints border-constraint="North"/>
         <properties>
           <background color="-13392152"/>
@@ -21,9 +21,13 @@
         <border type="none"/>
         <children>
           <component id="81b65" class="javax.swing.JButton" binding="minimizeButton" custom-create="true">
-            <constraints/>
+            <constraints>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+              <gridbag weightx="30.0" weighty="0.0"/>
+            </constraints>
             <properties>
               <actionCommand value=""/>
+              <alignmentX value="0.0"/>
               <background color="-1513565"/>
               <borderPainted value="false"/>
               <contentAreaFilled value="false"/>
@@ -32,10 +36,14 @@
               <opaque value="false"/>
               <preferredSize width="31" height="31"/>
               <text value="_"/>
+              <visible value="true"/>
             </properties>
           </component>
           <component id="ed3fd" class="javax.swing.JButton" binding="closeButton" custom-create="true">
-            <constraints/>
+            <constraints>
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+              <gridbag top="0" left="5" bottom="0" right="5" weightx="0.1" weighty="0.0"/>
+            </constraints>
             <properties>
               <actionCommand value=""/>
               <background color="-1513565"/>
@@ -46,6 +54,16 @@
               <opaque value="false"/>
               <preferredSize width="31" height="31"/>
               <text value="X"/>
+            </properties>
+          </component>
+          <component id="72fd2" class="javax.swing.JLabel" binding="title">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <gridbag top="0" left="15" bottom="0" right="0" weightx="0.0" weighty="0.0"/>
+            </constraints>
+            <properties>
+              <alignmentX value="0.0"/>
+              <text value=""/>
             </properties>
           </component>
         </children>
