--- a/src/view/contactsList/ContactsList.form
+++ b/src/view/contactsList/ContactsList.form
@@ -2,7 +2,7 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="view.contactsList.ContactsList">
   <grid id="27dc6" binding="rootPanel" custom-create="true" layout-manager="GridBagLayout">
     <constraints>
-      <xy x="20" y="20" width="500" height="232"/>
+      <xy x="20" y="20" width="581" height="441"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -28,52 +28,29 @@
           </scrollpane>
         </children>
       </grid>
-      <grid id="2ef29" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
+      <grid id="2ef29" binding="buttonPanel" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="2">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-          <gridbag weightx="1.0" weighty="1.0"/>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="4" fill="2" indent="0" use-parent-layout="false"/>
+          <gridbag weightx="1.0" weighty="0.0"/>
         </constraints>
         <properties/>
         <border type="none"/>
         <children>
-          <grid id="84f0f" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-            <margin top="0" left="0" bottom="0" right="0"/>
-            <constraints>
-              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties/>
-            <border type="none"/>
-            <children>
-              <component id="ea842" class="javax.swing.JButton" binding="buttonOk">
-                <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <text value="Ok"/>
-                </properties>
-              </component>
-              <component id="fe7ec" class="javax.swing.JButton" binding="buttonCancel">
-                <constraints>
-                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <text value="Cancel"/>
-                </properties>
-              </component>
-            </children>
-          </grid>
-          <hspacer id="b12d5">
-            <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-          </hspacer>
-          <component id="e1af4" class="javax.swing.JButton" binding="buttonDelete">
-            <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
+          <component id="8a2ee" class="javax.swing.JButton" binding="buttonOk">
+            <constraints/>
             <properties>
-              <text value="Delete"/>
+              <alignmentY value="0.5"/>
+              <autoscrolls value="false"/>
+              <horizontalAlignment value="4"/>
+              <text value="OK"/>
+            </properties>
+          </component>
+          <component id="d2960" class="javax.swing.JButton" binding="buttonCancel">
+            <constraints/>
+            <properties>
+              <alignmentY value="0.5"/>
+              <horizontalAlignment value="4"/>
+              <text value="Cancel"/>
             </properties>
           </component>
         </children>
