--- a/src/view/EnterPhone.form
+++ b/src/view/EnterPhone.form
@@ -28,13 +28,13 @@
           <gridbag weightx="5.0" weighty="0.0"/>
         </constraints>
       </hspacer>
-      <component id="a00ce" class="javax.swing.JButton" binding="continueBtn">
+      <component id="a00ce" class="javax.swing.JButton" binding="okBtn">
         <constraints>
           <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
           <gridbag weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties>
-          <text value="Ок"/>
+          <text value="Ok"/>
         </properties>
       </component>
       <component id="651d" class="javax.swing.JLabel">
