--- a/src/view/Registration.form
+++ b/src/view/Registration.form
@@ -7,13 +7,13 @@
     <properties/>
     <border type="none"/>
     <children>
-      <component id="44920" class="javax.swing.JButton" binding="completeBtn">
+      <component id="44920" class="javax.swing.JButton" binding="okBtn">
         <constraints>
           <grid row="10" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
           <gridbag weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties>
-          <text value="Ок"/>
+          <text value="Ok"/>
         </properties>
       </component>
       <vspacer id="925d0">
