--- a/src/view/dialogs/DecorationForDialog.form
+++ b/src/view/dialogs/DecorationForDialog.form
@@ -20,6 +20,7 @@
             <constraints/>
             <properties>
               <font size="20"/>
+              <horizontalAlignment value="0"/>
               <text value="Label"/>
             </properties>
           </component>
