--- a/src/view/EnterConfirmCodePanel.form
+++ b/src/view/EnterConfirmCodePanel.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="view.EnterConfirmationCode">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="view.EnterConfirmCodePanel">
   <grid id="27dc6" binding="rootPanel" custom-create="true" layout-manager="GridBagLayout">
     <constraints>
       <xy x="20" y="20" width="646" height="396"/>
